@@ -1,3 +1,8 @@
+2011-02-22  Ramon Novoa  <rnovoa@artica.es>
+
+	* build_src.sh, pandora_update_version.sh: Updated to build from
+	  branches.
+
 2010-12-28  Ramon Novoa  <rnovoa@artica.es>
 
 	* pandora_update_version.sh: Update the console installer version. Fixed
